--- a/configuration/templates/pages/claim-hours.hbs
+++ b/configuration/templates/pages/claim-hours.hbs
@@ -3,8 +3,8 @@
     Claim hours by certificate code
   </h1>
   <form id="input-code-form" action="/submit-hours-claim" method="POST">
-    <div class="columns col-gapless b-margin">
-      <div class="col-3">
+    <div class="columns b-margin">
+      <div class="column col-3">
         <div class="form-group">
           <label for="hours_claim_code" class="form-label">
             Enter your claim code
