--- a/configuration/templates/pages/verify-hours-fail.hbs
+++ b/configuration/templates/pages/verify-hours-fail.hbs
@@ -1,4 +1,8 @@
-<div class="container b-padding-full v-margin-full">
-  <h2>Hours verification</h2>
-  <p>Hours verification has failed. Please contact us at [SUPPORT EMAIL] for more assistance</p>
+<div class="empty">
+  <div class="empty-icon">
+    <span class="fal fa-user-clock fa-3x"></span>
+  </div>
+  <p class="empty-title h5">Volunteering verification</p>
+  <p class="empty-subtitle">Verification has failed. Please <a href="support@saltireawards.org.uk">contact us</a> for assistance.</p>
+  <div class="empty-action"></div>
 </div>
