--- a/configuration/templates/pages/verify-hours-pass.hbs
+++ b/configuration/templates/pages/verify-hours-pass.hbs
@@ -1,4 +1,8 @@
-<div class="container b-padding-full v-margin-full">
-  <h2>Hours verification</h2>
-  <p>Hours verification successful!</p>
+<div class="empty">
+  <div class="empty-icon">
+    <span class="fal fa-user-clock fa-3x"></span>
+  </div>
+  <p class="empty-title h5">Volunteering verification</p>
+  <p class="empty-subtitle">Volunteering verification successful.</p>
+  <div class="empty-action"></div>
 </div>
