--- a/configuration/templates/account/sign-up-details.hbs
+++ b/configuration/templates/account/sign-up-details.hbs
@@ -14,9 +14,9 @@
 
     <input type="hidden" name="signup" value="true">
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
-    <div class="columns col-gapless">
-      <div class="col-3"></div>
-      <div class="col-2">
+    <div class="columns">
+      <div class="column col-3"></div>
+      <div class="column col-2">
         <button id="detail-submit" class="btn btn-primary b-margin-full" type="submit">
           Submit details
         </button>
