--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -26,25 +26,25 @@
       signed by Scottish Government Ministers
     </div>
     <div class="columns certificates">
-      <div class="col-3 certificate">
+      <div class="column col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/challenge.png' ~}}" class="certificate-icon img-responsive" />
         <p>
           For those getting started in volunteering through team challenges
         </p>
       </div>
-      <div class="col-3 certificate">
+      <div class="column col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/approach.png' ~}}" class="certificate-icon img-responsive" />
         <p>
           For when you've reached 10 and 25 hours volunteering
         </p>
       </div>
-      <div class="col-3 certificate">
+      <div class="column col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/ascent.png' ~}}" class="certificate-icon img-responsive" />
         <p>
           For when you've reached 50, 100, 200 or even 500 hours
         </p>
       </div>
-      <div class="col-3 certificate">
+      <div class="column col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/summit.png' ~}}" class="certificate-icon img-responsive" />
         <p>
           For those that have made an outstanding contribution to volunteering
@@ -52,10 +52,10 @@
       </div>
     </div>
     <div class="my-saltire columns">
-      <div class="col-6 my-saltire-item align-centre">
+      <div class="column col-6 my-saltire-item align-centre">
         <a href="/sign-up" class="btn btn-primary text-centre">Register now</a>
       </div>
-      <div class="col-6 my-saltire-item align-centre">
+      <div class="column col-6 my-saltire-item align-centre">
         <a href="/sign-in" class="btn text-centre">Sign in</a>
       </div>
     </div>
