updating task submission form

--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -213,7 +213,7 @@
           config: { ">": { addClass: "disabled" } }
           },
           {
-          name: "testRequest",
+          name: "submitTaskRequest",
           type: "request",
           config: { url: "/submit-task" }
           },
