--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -75,7 +75,7 @@
             Volunteer manager
           </label>
         </div>
-        <div class="column col-5">
+        <div class="col-5">
           <div class="form-horizontal">
             <div class="form-group">
               <div class="column col-6">
