--- a/configuration/partials/opportunity/actions.hbs
+++ b/configuration/partials/opportunity/actions.hbs
@@ -1,5 +1,5 @@
 <div class="card-footer">
-  <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-primary">Find out more</a>
+  <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-link">Find out more</a>
   <div class="pull-right">
     <div id="action-chips" class="chip-set">
       {{#if opportunity_contact_email ~}}
