--- a/configuration/partials/volunteering-search-form.hbs
+++ b/configuration/partials/volunteering-search-form.hbs
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="column col-1">
-          <button type="submit" id="search-opportunities" class="btn btn-primary t-margin">
+          <button type="submit" id="search-opportunities" class="btn btn-primary btn-lg">
             Search
             <!-- <span class="far fa-search" aria-hidden="true"></span> -->
           </button>
