--- a/configuration/templates/account/approval-fail.hbs
+++ b/configuration/templates/account/approval-fail.hbs
@@ -1,6 +1,10 @@
-<div class="container-fluid b-padding-full v-margin-full">
-  <h2>{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} account approval</h2>
-  <p>
+<div class="empty">
+  <div class="empty-icon">
+    <span class="fal fa-user-check fa-3x"></span>
+  </div>
+  <p class="empty-title h5">{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} account approval</p>
+  <p class="empty-subtitle">
     {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} approval has failed. Please <a href="mailto:support@saltireawards.org.uk">contact us</a> for assistance.
   </p>
+  <div class="empty-action"></div>
 </div>
