fixed some issues with tasks ajax submission

--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -203,7 +203,7 @@
 
 </script>
 
-<script type="javascript/blocked" data-component-config="add-task">
+<script type="javascript/blocked" data-component-config="submit-task">
   {
     submit: {
       preventDefault: true,
