More scroll spy testing

--- a/configuration/partials/opportunity/full.hbs
+++ b/configuration/partials/opportunity/full.hbs
@@ -83,8 +83,7 @@
             viewportProximityChange: {
               rules: [
                 {
-                  verb: "enter",
-                  edge: "top",
+                  rule: "enter-bottom",
                   tasks: []
                 }
               ]
