--- a/configuration/partials/opportunity/full.hbs
+++ b/configuration/partials/opportunity/full.hbs
@@ -1,8 +1,8 @@
 <div class="full">
   {{> opportunity_key_info type="full"}}
   <div class="content-primary-info-container tabs">
-    <div class="columns col-gapless">
-      <div class="col-8 action">
+    <div class="columns">
+      <div class="column col-8 action">
         <ul class="tab tab-block">
           <li class="tab-item active">
             <a href="#information" data-component="TasksTrigger" data-TasksTrigger="tab">
