--- a/configuration/partials/volunteering-search-form.hbs
+++ b/configuration/partials/volunteering-search-form.hbs
@@ -33,7 +33,7 @@
           </div>
           <!-- <div class="after-textfield-action geo-lookup">Find me</div> -->
         </div>
-        <div class="col-2 filter-distance">
+        <div class="column col-2 filter-distance">
           <div class="form-group">
             {{!-- <label for="distance" class="form-label">
               Within
@@ -115,7 +115,7 @@
           </button>
         </div>
       </div>
-      <div class="columns col-gapless">
+      <div class="columns">
         <div class="column col-12">
           <div id="search-terms" class="chip-set"></div>
         </div>
