--- a/configuration/templates/account/sign-out.hbs
+++ b/configuration/templates/account/sign-out.hbs
@@ -1,1 +1,5 @@
-{{> account_sign_out_loader}}
+<form id="sign-out-form" method="POST" class="authentication-form container">
+  <div class="form-group">
+    <span class="form-icon loading"></span>
+  </div>
+</form>
