--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -169,8 +169,8 @@
       <footer class="footer">
         <div class="footer-main">
           <div class="container">
-            <div class="columns col-gapless">
-              <div class="col-3 info">
+            <div class="columns">
+              <div class="column col-3 info">
                 <h4>Help</h4>
                 <p class="b-margin r-margin">
                   {{#if @root.data.accountInfo.local_authority ~}}
@@ -198,7 +198,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-3 contact">
+              <div class="column col-3 contact">
                 <h4>&nbsp;</h4>
                 <ul class="fa-ul">
                   <li>
@@ -260,7 +260,7 @@
                   {{/if ~}}
                 </ul>
               </div>
-              <div class="col-6 about">
+              <div class="column col-6 about">
                 <h4>About</h4>
                 <p>
                   The Saltire Awards is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a>.
@@ -278,14 +278,14 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-              <div class="columns col-gapless">
-                <div class="col-8">
+              <div class="columns">
+                <div class="column col-8">
                   <p>
                     &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />
                     Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                   </p>
                 </div>
-                <div class="col-4 logos">
+                <div class="column col-4 logos">
                   <a href="https://www.gov.scot/policies/third-sector" class="brand-logo sg-logo" title="Scottish Government">
                     <img src="{{~>asset_url url='images/logos/SG_Quaternary_govscot_RGB.png'~}}" alt="Scottish Government" />
                   </a>
