--- a/configuration/templates/account/settings.hbs
+++ b/configuration/templates/account/settings.hbs
@@ -39,13 +39,13 @@
             <span class="alert-message"></span>
           </div>
 
-          <div class="form-group has-icon-left r-margin">
+          <div class="form-group has-icon-left">
             <!-- <label class="form-label" for="change-password-password">New password</label> -->
             <input class="form-input" type="password" id="change-password-password" placeholder="New password" data-lpignore="true" autocomplete="off"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
             <span class="form-icon far fa-key"></span>
           </div>
-          <div class="form-group has-icon-left r-margin">
+          <div class="form-group has-icon-left">
             <!-- <label class="form-label" for="change-password-confirm">New password (confirm)</label> -->
             <input class="form-input" type="password" id="change-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="off"
               data-component="TasksTrigger" data-TasksTrigger="focus-next" required />
