--- a/configuration/templates/pages/contact.hbs
+++ b/configuration/templates/pages/contact.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container b-padding-full v-margin-full contact equal-height">
   <h1>
     Contact us
   </h1>
@@ -42,6 +42,7 @@
           <div class="card-subtitle"><a href="{{website}}">{{{title}}}</a></div>
           {{/ifAll ~}}
         </div>
+        <div class="card-body"></div>
         <!-- <div class="card-media">
           <img src="{{logo}}" class="img-responsive">
         </div> -->
