pre-re-factor save

--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -215,7 +215,7 @@
           {
           name: "submitTaskRequest",
           type: "request",
-          config: { url: "/submit-task" }
+          config: { url: "/submit-task", method: 'POST' }
           },
           {
             __doNotCompile: true,
